--- a/Tingle.AzdoCleaner/Tingle.AzdoCleaner.csproj
+++ b/Tingle.AzdoCleaner/Tingle.AzdoCleaner.csproj
@@ -22,10 +22,8 @@
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
     <PackageReference Include="Microsoft.TeamFoundationServer.Client" Version="19.210.0-preview" />
     <PackageReference Include="Microsoft.TeamFoundation.DistributedTask.WebApi" Version="19.210.0-preview" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+    <PackageReference Include="MiniValidation" Version="0.7.2" />
   </ItemGroup>
 
 </Project>
