--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,4 @@ updates:
 - package-ecosystem: "nuget" # See documentation for possible values
   directory: "/" # Location of package manifests
   schedule:
-    interval: "daily"
-    time: "02:00"
-  open-pull-requests-limit: 10
+    interval: "weekly"
