--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,8 @@ jobs:
 
     - name: Determine Version
       uses: gittools/actions/gitversion/execute@v0
+      with:
+        useConfigFile: true
 
     - name: Test
       run: dotnet test -c $buildConfiguration --verbosity normal --collect "Code coverage"
