Support deleting Azure Resource Groups

--- a/Tingle.AzdoCleaner/appsettings.json
+++ b/Tingle.AzdoCleaner/appsettings.json
@@ -28,6 +28,7 @@
       "https://dev.azure.com/fabrikam/DefaultCollection;<my-pat-here>"
     ],
 
+    "AzureResourceGroups": true,
     "AzureKubernetes": true,
     "AzureWebsites": true,
     "AzureStaticWebApps": true,
