Support deleting Azure SQL Servers and databases

--- a/Tingle.AzdoCleaner/appsettings.json
+++ b/Tingle.AzdoCleaner/appsettings.json
@@ -33,6 +33,7 @@
     "AzureWebsites": true,
     "AzureStaticWebApps": true,
     "AzureContainerApps": true,
-    "AzureContainerInstances": true
+    "AzureContainerInstances": true,
+    "AzureSql": true
   }
 }
