--- a/Tingle.AzdoCleaner/Tingle.AzdoCleaner.csproj
+++ b/Tingle.AzdoCleaner/Tingle.AzdoCleaner.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Azure.ResourceManager.AppService" Version="1.0.0" />
     <PackageReference Include="Azure.ResourceManager.ContainerInstance" Version="1.0.1" />
     <PackageReference Include="Azure.ResourceManager.ContainerService" Version="1.1.0" />
+    <PackageReference Include="Azure.ResourceManager.Sql" Version="1.2.0" />
     <PackageReference Include="KubernetesClient" Version="10.0.16" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
     <PackageReference Include="Microsoft.TeamFoundationServer.Client" Version="19.210.0-preview" />
