--- a/Tingle.AzdoCleaner/Tingle.AzdoCleaner.csproj
+++ b/Tingle.AzdoCleaner/Tingle.AzdoCleaner.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Azure.ResourceManager.ContainerService" Version="1.1.0" />
     <PackageReference Include="Azure.ResourceManager.Sql" Version="1.2.0" />
     <PackageReference Include="KubernetesClient" Version="10.0.27" />
+    <PackageReference Include="Macross.Json.Extensions" Version="3.0.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
     <PackageReference Include="Microsoft.TeamFoundationServer.Client" Version="19.210.0-preview" />
     <PackageReference Include="Microsoft.TeamFoundation.DistributedTask.WebApi" Version="19.210.0-preview" />
