--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,12 @@ updates:
   directory: "/" # Location of package manifests
   schedule:
     interval: "weekly"
+  # Ignore patch updates for some packages
+  - dependency-name: "Microsoft.*"
+    update-types: ["version-update:semver-patch"]
+  - dependency-name: "System.*"
+    update-types: ["version-update:semver-patch"]
+  - dependency-name: "Azure.*"
+    update-types: ["version-update:semver-patch"]
+  - dependency-name: "KubernetesClient"
+    update-types: ["version-update:semver-patch"]
