--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,7 +57,7 @@ jobs:
           az bicep build --file main.bicep --outfile $GITHUB_WORKSPACE/drop/main.json
 
     - name: Pull Docker base image & warm Docker cache
-      run: docker pull "tingle/$IMAGE_NAME:latest"
+      run: docker pull "ghcr.io/tinglesoftware/$IMAGE_NAME:latest"
 
     - name: Build image
       run: |
@@ -68,21 +68,22 @@ jobs:
         --label com.github.image.job.id=$GITHUB_JOB \
         --label com.github.image.source.sha=$GITHUB_SHA \
         --label com.github.image.source.branch=$GITHUB_REF \
-        -t "tingle/$IMAGE_NAME:latest" \
-        -t "tingle/$IMAGE_NAME:$GITVERSION_NUGETVERSIONV2" \
-        --cache-from tingle/$IMAGE_NAME:latest \
+        -t "ghcr.io/tinglesoftware/$IMAGE_NAME:latest" \
+        -t "ghcr.io/tinglesoftware/$IMAGE_NAME:$GITVERSION_NUGETVERSIONV2" \
+        --cache-from ghcr.io/tinglesoftware/$IMAGE_NAME:latest \
         --build-arg BUILDKIT_INLINE_CACHE=1 \
         $GITHUB_WORKSPACE/drop/Tingle.AzdoCleaner
 
-    - name: Log into registry (Docker Hub)
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+    - name: Log into registry
+      if: ${{ (github.ref == 'refs/heads/main') || (!startsWith(github.ref, 'refs/pull')) || startsWith(github.ref, 'refs/tags') }}
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
 
-    - name: Push image to Docker Hub (latest)
+    - name: Push image (latest)
       if: github.ref == 'refs/heads/main'
-      run: docker push "tingle/$IMAGE_NAME:latest"
+      run: docker push "ghcr.io/tinglesoftware/$IMAGE_NAME:latest"
 
-    - name: Push image to Docker Hub (NuGetVersionV2)
-      run: docker push "tingle/$IMAGE_NAME:$GITVERSION_NUGETVERSIONV2"
+    - name: Push image (NuGetVersionV2)
+      run: docker push "ghcr.io/tinglesoftware/$IMAGE_NAME:$GITVERSION_NUGETVERSIONV2"
 
     - name: Publish Artifact
       uses: actions/upload-artifact@v3
