--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -101,3 +101,18 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         draft: true
         allowUpdates: true
+
+  Cleanup:
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Delete old packages
+      uses: actions/delete-package-versions@v4
+      with:
+        owner: ${{ env.repository_owner }}
+        repo: ${{ github.event.repository.name }}
+        token: ${{ secrets.GITHUB_TOKEN }}
+        package-name: 'azure-devops-cleaner'
+        min-versions-to-keep: 20
+        delete-only-pre-release-versions: true
