--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,7 @@ jobs:
           az bicep build --file main.bicep --outfile $GITHUB_WORKSPACE/drop/main.json
 
     - name: Pull Docker base image & warm Docker cache
-      run: docker pull "ghcr.io/tinglesoftware/$IMAGE_NAME:latest"
+      run: docker pull "ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:latest"
 
     - name: Build image
       run: |
@@ -81,11 +81,12 @@ jobs:
         --label com.github.image.job.id=$GITHUB_JOB \
         --label com.github.image.source.sha=$GITHUB_SHA \
         --label com.github.image.source.branch=$GITHUB_REF \
-        -t "ghcr.io/tinglesoftware/$IMAGE_NAME:latest" \
-        -t "ghcr.io/tinglesoftware/$IMAGE_NAME:$GITVERSION_NUGETVERSIONV2" \
-        -t "ghcr.io/tinglesoftware/$IMAGE_NAME:$GITVERSION_MAJOR.$GITVERSION_MINOR" \
-        -t "ghcr.io/tinglesoftware/$IMAGE_NAME:$GITVERSION_MAJOR" \
-        --cache-from ghcr.io/tinglesoftware/$IMAGE_NAME:latest \
+        -t "ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:latest" \
+        -t "ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$GITVERSION_SHORTSHA" \
+        -t "ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$GITVERSION_NUGETVERSIONV2" \
+        -t "ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$GITVERSION_MAJOR.$GITVERSION_MINOR" \
+        -t "ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$GITVERSION_MAJOR" \
+        --cache-from ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:latest \
         --build-arg BUILDKIT_INLINE_CACHE=1 \
         $GITHUB_WORKSPACE/drop/Tingle.AzdoCleaner
 
@@ -93,9 +94,11 @@ jobs:
       if: ${{ (github.ref == 'refs/heads/main') || (!startsWith(github.ref, 'refs/pull')) || startsWith(github.ref, 'refs/tags') }}
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
 
-    - name: Push image (latest)
+    - name: Push image (latest, ShortSha)
       if: github.ref == 'refs/heads/main'
-      run: docker push "ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:latest"
+      run: |
+        docker push "ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:latest"
+        docker push "ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$GITVERSION_SHORTSHA"
 
     - name: Push image (NuGetVersionV2)
       if: "!startsWith(github.ref, 'refs/pull')"
@@ -133,8 +136,8 @@ jobs:
       uses: actions/delete-package-versions@v4
       with:
         owner: ${{ env.repository_owner }}
-        repo: ${{ github.event.repository.name }}
         token: ${{ secrets.GITHUB_TOKEN }}
         package-name: 'azure-devops-cleaner'
+        package-type: 'nuget'
         min-versions-to-keep: 20
         delete-only-pre-release-versions: true
