--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -135,9 +135,7 @@ jobs:
     - name: Delete old packages
       uses: actions/delete-package-versions@v4
       with:
-        owner: ${{ env.repository_owner }}
-        token: ${{ secrets.GITHUB_TOKEN }}
         package-name: 'azure-devops-cleaner'
-        package-type: 'nuget'
+        package-type: 'container'
         min-versions-to-keep: 20
-        delete-only-pre-release-versions: true
+        delete-only-pre-release-versions: "true"
