--- a/Tingle.AzdoCleaner/appsettings.json
+++ b/Tingle.AzdoCleaner/appsettings.json
@@ -34,6 +34,7 @@
     "AzureStaticWebApps": true,
     "AzureContainerApps": true,
     "AzureContainerInstances": true,
+    "AzurePostgreSql": true,
     "AzureSql": true
   }
 }
