--- a/Tingle.AzdoCleaner/Tingle.AzdoCleaner.csproj
+++ b/Tingle.AzdoCleaner/Tingle.AzdoCleaner.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Azure.ResourceManager.AppService" Version="1.0.0" />
     <PackageReference Include="Azure.ResourceManager.ContainerInstance" Version="1.0.1" />
     <PackageReference Include="Azure.ResourceManager.ContainerService" Version="1.1.0" />
+    <PackageReference Include="Azure.ResourceManager.CosmosDB" Version="1.3.0" />
     <PackageReference Include="Azure.ResourceManager.PostgreSql" Version="1.1.1" />
     <PackageReference Include="Azure.ResourceManager.Sql" Version="1.2.0" />
     <PackageReference Include="KubernetesClient" Version="11.0.9" />
