Support deleting Azure MySQL servers and databases

--- a/Tingle.AzdoCleaner/appsettings.json
+++ b/Tingle.AzdoCleaner/appsettings.json
@@ -35,6 +35,7 @@
     "AzureContainerApps": true,
     "AzureContainerInstances": true,
     "AzureCosmosDB": true,
+    "AzureMySql": true,
     "AzurePostgreSql": true,
     "AzureSql": true
   }
