--- a/Tingle.AzdoCleaner/Tingle.AzdoCleaner.csproj
+++ b/Tingle.AzdoCleaner/Tingle.AzdoCleaner.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <Deterministic>true</Deterministic>
@@ -19,6 +19,7 @@
     <PackageReference Include="Azure.ResourceManager.ContainerInstance" Version="1.0.1" />
     <PackageReference Include="Azure.ResourceManager.ContainerService" Version="1.1.0" />
     <PackageReference Include="Azure.ResourceManager.CosmosDB" Version="1.3.0" />
+    <PackageReference Include="Azure.ResourceManager.MySql" Version="1.0.1" />
     <PackageReference Include="Azure.ResourceManager.PostgreSql" Version="1.1.1" />
     <PackageReference Include="Azure.ResourceManager.Sql" Version="1.2.0" />
     <PackageReference Include="KubernetesClient" Version="11.0.9" />
