Move handling of received webhooks to the background

--- a/Tingle.AzdoCleaner/appsettings.json
+++ b/Tingle.AzdoCleaner/appsettings.json
@@ -23,6 +23,24 @@
     }
   },
 
+  "EventBus": {
+    "SelectedTransport": "InMemory", // InMemory|ServiceBus|QueueStorage
+
+    "DefaultTransportWaitStarted": false, // defaults to true which causes startup tasks to hang
+    "Naming": {
+      "UseFullTypeNames": false
+    },
+    "Transports": {
+      "azure-service-bus": {
+        "FullyQualifiedNamespace": "{your_namespace}.servicebus.windows.net",
+        "DefaultEntityKind": "Queue"
+      },
+      "azure-queue-storage": {
+        "ServiceUrl": "https://{your_account_name}.queue.core.windows.net"
+      }
+    }
+  },
+
   "Handler": {
     "Projects": [
       "https://dev.azure.com/fabrikam/DefaultCollection;<my-pat-here>"
