--- a/Tingle.AzdoCleaner/appsettings.json
+++ b/Tingle.AzdoCleaner/appsettings.json
@@ -10,8 +10,9 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
-      "AspNetCore.Authentication": "Warning"
-    }
+      "AspNetCore.Authentication": "Warning",
+      "Tingle.EventBus": "Warning"
+}
   },
   "AllowedHosts": "*",
 
