--- a/Tingle.AzdoCleaner/Tingle.AzdoCleaner.csproj
+++ b/Tingle.AzdoCleaner/Tingle.AzdoCleaner.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <Deterministic>true</Deterministic>
@@ -32,7 +32,6 @@
     <PackageReference Include="Tingle.EventBus.Transports.Azure.QueueStorage" Version="0.18.1" />
     <PackageReference Include="Tingle.EventBus.Transports.Azure.ServiceBus" Version="0.19.0" />
     <PackageReference Include="Tingle.EventBus.Transports.InMemory" Version="0.19.0" />
-    <PackageReference Include="Tingle.Extensions.DataAnnotations" Version="4.0.0" />
   </ItemGroup>
 
 </Project>
