--- a/Tingle.AzdoCleaner/appsettings.json
+++ b/Tingle.AzdoCleaner/appsettings.json
@@ -56,6 +56,7 @@
     "AzureCosmosDB": true,
     "AzureMySql": true,
     "AzurePostgreSql": true,
-    "AzureSql": true
+    "AzureSql": true,
+    "AzureUserAssignedIdentities": true
   }
 }
