--- a/Tingle.AzdoCleaner/Dockerfile
+++ b/Tingle.AzdoCleaner/Dockerfile
@@ -1,4 +1,4 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
+#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 FROM mcr.microsoft.com/dotnet/aspnet:7.0-bullseye-slim AS base
 WORKDIR /app
@@ -6,7 +6,7 @@ EXPOSE 80
 EXPOSE 443
 
 LABEL org.opencontainers.image.description="Cleanup tool for Azure resources based on Azure DevOps PRs" \
-      org.opencontainers.image.source="https://github.com/tinglesoftware/azure-devops-cleaner.git"
+      org.opencontainers.image.source="https://github.com/tinglesoftware/azure-devops-cleaner"
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0-bullseye-slim AS build
 WORKDIR /src
