--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -105,7 +105,7 @@ stages:
     )
   jobs:
   - deployment: Deploy
-    environment: Dependabot
+    environment: Infrastructure
 
     pool:
       vmImage: 'ubuntu-latest'
