Allow logs for Tingle.EventBus

--- a/Tingle.AzdoCleaner/appsettings.json
+++ b/Tingle.AzdoCleaner/appsettings.json
@@ -10,9 +10,9 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
-      "AspNetCore.Authentication": "Warning",
-      "Tingle.EventBus": "Warning"
-}
+      "AspNetCore.Authentication": "Warning"/*,
+      "Tingle.EventBus": "Warning"*/
+    }
   },
   "AllowedHosts": "*",
 
