--- a/Tingle.AzdoCleaner/Properties/launchSettings.json
+++ b/Tingle.AzdoCleaner/Properties/launchSettings.json
@@ -14,6 +14,10 @@
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/health",
+      "environmentVariables": {
+        "ASPNETCORE_HTTPS_PORTS": "8081",
+        "ASPNETCORE_HTTP_PORTS": "8080"
+      },
       "publishAllPorts": true,
       "useSSL": true
     }
