--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,11 @@ jobs:
       with:
         useConfigFile: true
 
+    - name: Setup .NET SDK
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 8.x
+
     - name: Test
       run: dotnet test -c $buildConfiguration --verbosity normal --collect "Code coverage"
 
