--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,16 +7,24 @@ on:
     tags:
     - '*'
     paths-ignore:
+    - .devcontainer/**
+    - .vscode/**
+    - docs/**
     - README.md
     - LICENSE
-    - docs/**
   pull_request:
     branches:
     - main
     paths-ignore:
+    - .devcontainer/**
+    - .vscode/**
+    - docs/**
     - README.md
     - LICENSE
-    - docs/**
+
+env:
+  AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  AZURE_RESOURCE_GROUP: ${{ secrets.AZURE_RESOURCE_GROUP }}
 
 jobs:
   Build:
@@ -128,3 +136,51 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         draft: true
         allowUpdates: true
+
+    - name: Replace tokens in deploy folder
+      uses: cschleiden/replace-tokens@v1
+      with:
+        files: '["${{ github.workspace }}/main.parameters.json"]'
+      env:
+        DOCKER_IMAGE_TAG: ${{ steps.gitversion.outputs.nuGetVersionV2 }}
+        NOTIFICATION_PASSWORD: ${{ secrets.NOTIFICATION_PASSWORD }}
+        CLEANER_PROJECT_TOKEN: ${{ secrets.CLEANER_PROJECT_TOKEN }}
+
+    - name: Create deploy folder
+      run: |
+        mkdir -p deploy
+        cp ${{ github.workspace }}/main.json deploy/main.bicep
+        cp ${{ github.workspace }}/main.parameters.json deploy/main.parameters.json
+
+    - name: Publish deploy artifact
+      uses: actions/upload-artifact@v4
+      with:
+        path: deploy
+        name: deploy
+        retention-days: 1
+
+  Deploy:
+    runs-on: ubuntu-latest
+    needs: Build
+    if: ${{ github.actor != 'dependabot[bot]' && ((github.ref == 'refs/heads/main') || startsWith(github.ref, 'refs/tags')) }}
+
+    steps:
+    - name: Download Artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: deploy
+        path: ${{ github.workspace }}/deploy
+
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Deploy
+      uses: azure/arm-deploy@v2
+      with:
+        subscriptionId: ${{ env.AZURE_SUBSCRIPTION_ID }}
+        resourceGroupName: ${{ env.AZURE_RESOURCE_GROUP }}
+        template: '${{ github.workspace }}/deploy/main.bicep'
+        parameters: '${{ github.workspace }}/deploy/main.parameters.json'
+        scope: 'resourcegroup'
