Revert to using shortSha for docker image tag

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,7 +78,7 @@ jobs:
       uses: azure/cli@v2
       with:
         inlineScript: |
-          cp ${{ github.workspace }}/main.bicep ${{ github.workspace }}/drop/main.bicep
+          cp ${{ github.workspace }}/main.bicep ${{ github.workspace }}/drop/main.bicep && \
           az bicep build --file main.bicep --outfile ${{ github.workspace }}/drop/main.json
 
     - name: Publish Artifact
@@ -99,7 +99,7 @@ jobs:
       with:
         files: '["${{ github.workspace }}/deploy/main.parameters.json"]'
       env:
-        DOCKER_IMAGE_TAG: ${{ steps.gitversion.outputs.nuGetVersionV2 }}
+        DOCKER_IMAGE_TAG: ${{ steps.gitversion.outputs.shortSha }}
         NOTIFICATION_PASSWORD: ${{ secrets.NOTIFICATION_PASSWORD }}
         CLEANER_PROJECT_TOKEN: ${{ secrets.CLEANER_PROJECT_TOKEN }}
 
