--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Delete old packages
       uses: actions/delete-package-versions@v5
       with:
-        package-name: 'azure-devops-cleaner'
+        package-name: 'azure-resources-cleaner'
         package-type: 'container'
         min-versions-to-keep: 20
         delete-only-pre-release-versions: "true"
