--- a/Tingle.AzureCleaner/appsettings.json
+++ b/Tingle.AzureCleaner/appsettings.json
@@ -42,8 +42,8 @@
     }
   },
 
-  "Handler": {
-    "Projects": [
+  "Cleaner": {
+    "AzdoProjects": [
       "https://dev.azure.com/fabrikam/DefaultCollection;<my-pat-here>"
     ],
 
