--- a/Tingle.AzureCleaner/Properties/launchSettings.json
+++ b/Tingle.AzureCleaner/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 {
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "Tingle.AzdoCleaner": {
+    "Tingle.AzureCleaner": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "health",
