--- a/Tingle.AzureCleaner/Tingle.AzureCleaner.csproj
+++ b/Tingle.AzureCleaner/Tingle.AzureCleaner.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <InternalsVisibleTo Include="Tingle.AzdoCleaner.Tests" />
+    <InternalsVisibleTo Include="Tingle.AzureCleaner.Tests" />
   </ItemGroup>
 
   <ItemGroup>
