Add CLI functionality to allow invoking via docker

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,8 @@ updates:
       interval: "weekly"
       time: "02:00"
     groups:
+      command-line:
+        patterns: ["System.CommandLine*"]
       event-bus:
         patterns: ["Tingle.EventBus.*"]
       microsoft:
