--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,11 +61,22 @@ jobs:
       run: dotnet test -c Release --collect "Code coverage"
 
     - name: Publish
-      run: |
-        dotnet publish \
-        ${{ github.workspace }}/Tingle.AzureCleaner/Tingle.AzureCleaner.csproj \
-        -c Release \
-        -o ${{ github.workspace }}/drop/Tingle.AzureCleaner
+      run: >
+        dotnet publish
+        ${{ github.workspace }}/Tingle.AzureCleaner/Tingle.AzureCleaner.csproj
+        --configuration Release
+        --output ${{ github.workspace }}/drop/Tingle.AzureCleaner
+        -p:PackageVersion=${{ steps.gitversion.outputs.nuGetVersion }}
+        -p:VersionPrefix=${{ steps.gitversion.outputs.nuGetVersion }}
+
+    - name: Pack
+      run: >
+        dotnet pack
+        --no-build
+        --configuration Release
+        --output ${{ github.workspace }}/drop
+        -p:PackageVersion=${{ steps.gitversion.outputs.nuGetVersion }}
+        -p:VersionPrefix=${{ steps.gitversion.outputs.nuGetVersion }}
 
     - name: Replace tokens
       uses: cschleiden/replace-tokens@v1
@@ -189,3 +200,55 @@ jobs:
         template: '${{ github.workspace }}/deploy/main.bicep'
         parameters: '${{ github.workspace }}/deploy/main.parameters.json'
         scope: 'resourcegroup'
+
+  GitHubPackages:
+    runs-on: ubuntu-latest
+    needs: [Deploy, Build]
+    name: Publish (GitHub Packages)
+
+    steps:
+    - uses: actions/download-artifact@v4
+      with:
+        name: drop
+        path: ${{ github.workspace }}/drop
+
+    - name: Setup .NET SDK
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: '8.x'
+        source-url: https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json
+      env:
+        NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Publish to nuget.pkg.github.com
+      run: >
+        dotnet nuget push "${{ github.workspace }}/drop/*"
+        -k ${{ secrets.GITHUB_TOKEN }}
+        --skip-duplicate
+
+  NugetOrg:
+    runs-on: ubuntu-latest
+    needs: [Deploy, GitHubPackages]
+    name: Publish (Nuget.org)
+    if: ${{ startsWith(github.ref, 'refs/tags') }}
+
+    steps:
+    - uses: actions/download-artifact@v4
+      with:
+        name: drop
+        path: ${{ github.workspace }}/drop
+
+    - name: Setup .NET SDK
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 8.x
+        source-url: https://api.nuget.org/v3/index.json
+      env:
+        NUGET_AUTH_TOKEN: ${{ secrets.NUGET_API_KEY }}
+
+    - name: Publish to NuGet.org
+      if: startsWith(github.ref, 'refs/tags/')
+      run: >
+        dotnet nuget push "${{ github.workspace }}/drop/*"
+        -k ${{ secrets.NUGET_API_KEY }}
+        --skip-duplicate
