--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -203,7 +203,7 @@ jobs:
 
   GitHubPackages:
     runs-on: ubuntu-latest
-    needs: [Deploy, Build]
+    needs: Deploy
     name: Publish (GitHub Packages)
 
     steps:
@@ -228,7 +228,7 @@ jobs:
 
   NugetOrg:
     runs-on: ubuntu-latest
-    needs: [Deploy, GitHubPackages]
+    needs: Deploy
     name: Publish (Nuget.org)
     if: ${{ startsWith(github.ref, 'refs/tags') }}
 
