Update job conditions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -203,8 +203,9 @@ jobs:
 
   GitHubPackages:
     runs-on: ubuntu-latest
-    needs: Deploy
     name: Publish (GitHub Packages)
+    needs: Build
+    if: ${{ github.actor != 'dependabot[bot]' && ((github.ref == 'refs/heads/main') || startsWith(github.ref, 'refs/tags')) }}
 
     steps:
     - uses: actions/download-artifact@v4
@@ -228,9 +229,9 @@ jobs:
 
   NugetOrg:
     runs-on: ubuntu-latest
-    needs: Deploy
     name: Publish (Nuget.org)
-    if: ${{ startsWith(github.ref, 'refs/tags') }}
+    needs: Build
+    if: ${{ github.actor != 'dependabot[bot]' && startsWith(github.ref, 'refs/tags') }}
 
     steps:
     - uses: actions/download-artifact@v4
