--- a/Tingle.AzureCleaner/Properties/launchSettings.json
+++ b/Tingle.AzureCleaner/Properties/launchSettings.json
@@ -3,7 +3,7 @@
   "profiles": {
     "Tingle.AzureCleaner": {
       "commandName": "Project",
-      //"commandLineArgs": "Tingle.AzureCleaner --pr 12",
+      //"commandLineArgs": "Tingle.AzureCleaner --pr 3 --subscription DEPENDABOT",
       "launchBrowser": true,
       "launchUrl": "health",
       "environmentVariables": {
