--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -10,10 +10,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Delete old packages
+    - name: Delete old packages (docker)
       uses: actions/delete-package-versions@v5
       with:
         package-name: 'azure-resources-cleaner'
         package-type: 'container'
         min-versions-to-keep: 20
         delete-only-pre-release-versions: "true"
+
+    - name: Delete old packages (nuget)
+      uses: actions/delete-package-versions@v5
+      with:
+        package-name: 'azure-resources-cleaner'
+        package-type: 'nuget'
+        min-versions-to-keep: 10
