--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,8 @@ on:
     - README.md
     - LICENSE
     - '**/README.md'
+    - .github/**
+    - '!.github/workflows/build.yml'
   pull_request:
     branches:
     - main
@@ -23,6 +25,8 @@ on:
     - README.md
     - LICENSE
     - '**/README.md'
+    - .github/**
+    - '!.github/workflows/build.yml'
   workflow_dispatch:
 
 env:
