--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "azdo",
         "azrc",
         "azuredevops",
-        "Kubernetes"
+        "Keyspaces",
+        "Kubernetes",
+        "vsts"
     ]
 }
