--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,12 +48,12 @@ jobs:
         fetch-depth: 0 # Required for GitVersion
 
     - name: Install GitVersion
-      uses: gittools/actions/gitversion/setup@v2
+      uses: gittools/actions/gitversion/setup@v3.0.0
       with:
-        versionSpec: '5.x'
+        versionSpec: '6.x'
 
     - name: Determine Version
-      uses: gittools/actions/gitversion/execute@v2
+      uses: gittools/actions/gitversion/execute@v3.0.0
       id: gitversion
       with:
         useConfigFile: true
@@ -71,7 +71,7 @@ jobs:
         dotnet build
         --configuration Release
         --no-restore
-        -p:VersionPrefix=${{ steps.gitversion.outputs.nuGetVersion }}
+        -p:VersionPrefix=${{ steps.gitversion.outputs.fullSemVer }}
 
     - name: Test
       run: >
@@ -93,7 +93,7 @@ jobs:
         --no-build
         --configuration Release
         --output ${{ github.workspace }}/drop
-        -p:PackageVersion=${{ steps.gitversion.outputs.nuGetVersion }}
+        -p:PackageVersion=${{ steps.gitversion.outputs.fullSemVer }}
 
     - name: Replace tokens
       uses: cschleiden/replace-tokens@v1
@@ -125,7 +125,7 @@ jobs:
       with:
         files: '["${{ github.workspace }}/deploy/main.parameters.json"]'
       env:
-        DOCKER_IMAGE_TAG: ${{ steps.gitversion.outputs.nuGetVersionV2 }}
+        DOCKER_IMAGE_TAG: ${{ steps.gitversion.outputs.fullSemVer }}
         NOTIFICATION_PASSWORD: ${{ secrets.NOTIFICATION_PASSWORD }}
         CLEANER_PROJECT_TOKEN: ${{ secrets.CLEANER_PROJECT_TOKEN }}
 
@@ -151,7 +151,7 @@ jobs:
         --label com.github.image.source.branch=${{ github.ref }} \
         -t "ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest" \
         -t "ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ steps.gitversion.outputs.shortSha }}" \
-        -t "ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ steps.gitversion.outputs.nuGetVersionV2 }}" \
+        -t "ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ steps.gitversion.outputs.fullSemVer }}" \
         -t "ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ steps.gitversion.outputs.major}}.${{ steps.gitversion.outputs.minor }}" \
         -t "ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ steps.gitversion.outputs.major }}" \
         --cache-from ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest \
@@ -170,7 +170,7 @@ jobs:
 
     - name: Push image (NuGetVersionV2)
       if: ${{ !startsWith(github.ref, 'refs/pull') }}
-      run: docker push "ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ steps.gitversion.outputs.nuGetVersionV2 }}"
+      run: docker push "ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ steps.gitversion.outputs.fullSemVer }}"
 
     - name: Push image (major, minor)
       if: startsWith(github.ref, 'refs/tags')
