Add package tags for NuGet use

--- a/Tingle.AzureCleaner/Tingle.AzureCleaner.csproj
+++ b/Tingle.AzureCleaner/Tingle.AzureCleaner.csproj
@@ -17,6 +17,7 @@
 
   <PropertyGroup>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageTags>$(PackageTags);azure;reviewapp;reviews;cleanup</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
