--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,6 +104,8 @@ jobs:
       uses: azure/cli@v2
       with:
         inlineScript: |
+          tdnf install -y icu
+          tdnf install -y jq
           cp ${{ github.workspace }}/main.bicep ${{ github.workspace }}/drop/main.bicep && \
           az bicep build --file main.bicep --outfile ${{ github.workspace }}/drop/main.json
 
