--- a/Tingle.AzureCleaner/Tingle.AzureCleaner.csproj
+++ b/Tingle.AzureCleaner/Tingle.AzureCleaner.csproj
@@ -54,7 +54,6 @@
     <PackageReference Include="Azure.ResourceManager.PostgreSql" Version="1.2.0" />
     <PackageReference Include="Azure.ResourceManager.Sql" Version="1.2.1" />
     <PackageReference Include="KubernetesClient" Version="16.0.2" />
-    <PackageReference Include="Macross.Json.Extensions" Version="3.0.0" />
     <PackageReference Include="Microsoft.TeamFoundationServer.Client" Version="19.225.1" />
     <PackageReference Include="Microsoft.TeamFoundation.DistributedTask.WebApi" Version="19.225.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
@@ -64,6 +63,7 @@
     <PackageReference Include="Tingle.EventBus.Transports.Azure.QueueStorage" Version="0.23.1" />
     <PackageReference Include="Tingle.EventBus.Transports.Azure.ServiceBus" Version="0.23.1" />
     <PackageReference Include="Tingle.EventBus.Transports.InMemory" Version="0.23.1" />
+    <PackageReference Include="Tingle.Extensions.Primitives" Version="5.0.1" />
   </ItemGroup>
 
   <ItemGroup>
