Set concurrency on workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,10 @@ jobs:
       IMAGE_NAME: 'azure-resources-cleaner'
       DOCKER_BUILDKIT: 1 # Enable Docker BuildKit
 
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: true
+
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -200,7 +204,8 @@ jobs:
   #   if: ${{ github.actor != 'dependabot[bot]' && ((github.ref == 'refs/heads/main') || startsWith(github.ref, 'refs/tags')) }}
 
   #   concurrency:
-  #     group: ${{ github.workflow }}
+  #     group: ${{ github.workflow }}-${{ github.ref }}
+  #     cancel-in-progress: false # wait for previous runs to complete
 
   #   steps:
   #   - name: Download Artifact
