Support `linux/arm64` images for server
This builds multi-arch images (`linux/amd64` and `linux/arm64`) to allow running the server on a Raspberry Pi and on local macOS machines.

- Use `docker/login-action@v3` for login (better).
- Setup builder using `docker/setup-buildx-action@v3`.
- Build multi-arch images using `docker/build-push-action@v6`.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,23 +1,24 @@
 # To get started with Dependabot version updates, you'll need to specify which
 # package ecosystems to update and where the package manifests are located.
 # Please see the documentation for all configuration options:
-# https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
+# https://docs.github.com/en/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
 
 version: 2
 updates:
-  - package-ecosystem: 'devcontainers' # See documentation for possible values
-    directory: '/' # Location of package manifests
+  - package-ecosystem: 'devcontainers'
+    directory: '/'
     schedule:
       interval: 'monthly'
       time: '02:00'
-    open-pull-requests-limit: 10
 
-  - package-ecosystem: 'github-actions' # See documentation for possible values
-    directory: '/' # Location of package manifests
+  - package-ecosystem: 'github-actions'
+    directory: '/'
     schedule:
       interval: 'monthly'
       time: '02:00'
-    open-pull-requests-limit: 10
+    groups:
+      docker:
+        patterns: ['docker/*']
 
   - package-ecosystem: 'dotnet-sdk'
     directory: '/'
@@ -45,7 +46,7 @@ updates:
       command-line:
         patterns: ['System.CommandLine*']
       event-bus:
-        patterns: ['Tingle.EventBus.*']
+        patterns: ['Tingle.EventBus*']
       microsoft:
         patterns: ['Microsoft.*']
         exclude-patterns:
