--- a/Tingle.AzureCleaner/Tingle.AzureCleaner.csproj
+++ b/Tingle.AzureCleaner/Tingle.AzureCleaner.csproj
@@ -56,7 +56,6 @@
     <PackageReference Include="KubernetesClient" Version="16.0.2" />
     <PackageReference Include="Microsoft.TeamFoundationServer.Client" Version="19.225.1" />
     <PackageReference Include="Microsoft.TeamFoundation.DistributedTask.WebApi" Version="19.225.1" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="MiniValidation" Version="0.9.2" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
     <PackageReference Include="System.CommandLine.Hosting" Version="0.4.0-alpha.22272.1" />
@@ -75,6 +74,10 @@
     <PackageReference Include="OpenTelemetry.Resources.Azure" Version="1.0.0-beta.9" />
     <PackageReference Include="OpenTelemetry.Resources.Host" Version="0.1.0-beta.3" />
     <PackageReference Include="OpenTelemetry.Resources.ProcessRuntime" Version="0.1.0-beta.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
   </ItemGroup>
 
   <ItemGroup>
