--- a/Tingle.AzureCleaner/Dockerfile
+++ b/Tingle.AzureCleaner/Dockerfile
@@ -5,7 +5,7 @@ USER app
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
-ENV AS_WEB_APP true
+ENV AS_WEB_APP=true
 
 FROM mcr.microsoft.com/dotnet/sdk:9.0-bookworm-slim AS build
 ARG BUILD_CONFIGURATION=Release
